<resources>
    <string name="app_name">Crabify</string>

    <string name="desc_onboarding1">Deskripsi OnBoarding 1</string>
    <string name="title_onboarding1">Selamat Datang di Crabify</string>
    <string name="description_onboarding1">Aplikasi canggih yang akan membantu anda memantau dengan tepat kapan kepiting soka akan melakukan penggantian kulitnya , memastikan kualitas yang optimal.</string>
    <string name="next">Next</string>
    <string name="title_onboarding2">Tentang Aplikasi\nCrabify</string>
    <string name="description_onboarding2">Crabify adalah aplikasi yang memahami lebih dalam perilaku kepiting soka. Kami memberikan Anda alat yang diperlukan untuk melacak dan mendeteksi tanda-tanda awal penggantian kulit. Dengan demikian, Anda dapat merawat kepiting soka dengan lebih baik.</string>
    <string name="back">Back</string>
    <string name="get_started">Get Started</string>
    <string name="title_onboarding3">Ayo Mulai</string>
    <string name="description_onboarding3">Yuk, mari mulai menjelajahi dunia kepiting soka bersama Crabify sekarang!.</string>
    <string name="home">Home</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>

    <string name="open_call_to_action">Click open to view image classification</string>
    <string name="open_file_button">Open File</string>
    <string name="results_to_be_shown_here">results_to_be_shown_here</string>
    <string name="open_camera_button">Open Camera</string>
    <string name="captureImage">Capture Image</string>
    <string name="image_login">Image Login</string>
    <string name="sign_in">Sign In</string>
    <string name="copyright">Copyright @Bangkit2023</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="icon_google">Icon Google</string>
    <string name="create_account">Belum punya akun?</string>
    <string name="register_here">Sign Up</string>
    <string name="sign_up">Register</string>
    <string name="full_name">Full Name</string>
    <string name="default_web_client_id">245559464088-gtnaacdee9a0grjqd5t2jd602fkgu581.apps.googleusercontent.com</string>
    <string name="Logout">Logout</string>
    <string name="username">User Name</string>
    <string name="photo_profile">Foto Profil</string>
    <string name="email_settings">andipriyono94@gmail.com</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="reset_password_description">Please enter the email address you\'d like your password reset information sent to</string>
    <string name="email_address">Enter Email Address</string>
    <string name="send">Reset Password</string>
    <string name="statistic">Statistic</string>
    <string name="halaman_upload"><![CDATA["Detection Crab "]]></string>
    <string name="description_upload">Anda bisa melihat hasilnya dengan mengunggah berkas atau menggunakan kamera untuk deteksi langsung.</string>
    <string name="result">Result</string>
    <string name="classification">Classification</string>
    <string name="generate">Generate</string>
    <string name="welcome">Selamat Pagi,</string>
    <string name="date">Senin, 22 Desember 2023</string>
    <string name="menu_home">Menu Pintas</string>
    <string name="list">List</string>
    <string name="sensor_tempertaure">Temperature</string>
    <string name="in_unit">in Unit</string>
    <string name="temperature_unit">90\u2103</string>
    <string name="switchcompat">Switch Compat</string>
    <string name="available_sensor">Available Sensor</string>
    <string name="analysis">Analisis</string>
    <string name="schedule">Schedule</string>
    <string name="label">Label :</string>
    <string name="score">Score :</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analisis">Analisis Crab</string>
    <string name="crab_soka">Kepiting Soka</string>
    <string name="crab_biasa">Kepiting Biasa</string>
</resources>