<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/uploadFragment"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload"
        app:showAsAction="always" />

<!--    <item-->
<!--        android:id="@+id/cameraFragment"-->
<!--        android:icon="@drawable/ic_camera"-->
<!--        android:title="@string/camera"-->
<!--        app:showAsAction="always" />-->

    <item
        android:id="@+id/fragmentProfile"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>