<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_marginStart="18dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="18dp"
    android:elevation="10dp"
    app:cardBackgroundColor="#F4F7F8"
    app:cardCornerRadius="20dp"
    app:cardMaxElevation="12dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_sensor"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/temperature_svgrepo_com"
            app:layout_constraintHorizontal_bias="0.5" />

        <TextView
            android:id="@+id/tv_sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sensor_tempertaure" />

        <TextView
            android:id="@+id/tv_in_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sensor_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/in_unit"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_in_unit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_in_unit"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/temperature_unit"
            android:textSize="12sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:checked="false" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>