<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.upload.ClassificationFragment">

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/halaman_upload"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:justificationMode="inter_word"
        android:text="@string/description_upload"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_headline"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_upload"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="@+id/tv_headline"
        app:layout_constraintStart_toStartOf="@+id/tv_headline"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_upload">

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/result"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_upload" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/cv_upload"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="@+id/cv_upload"
        app:layout_constraintStart_toStartOf="@+id/cv_upload"
        app:layout_constraintTop_toBottomOf="@+id/tv_output" />

    <TextView
        android:id="@+id/call_to_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/open_call_to_action"
        app:layout_constraintBottom_toTopOf="@+id/cv_icon_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_icon_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="@color/md_blue_100"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output">

        <ImageView
            android:id="@+id/open_file"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/upload_svgrep_com" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_icon_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        app:cardBackgroundColor="@color/md_blue_100"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="@+id/cv_icon_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_icon_upload">

        <ImageView
            android:id="@+id/open_camera"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/photography_and_video" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/upload"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cv_icon_upload"
        app:layout_constraintStart_toStartOf="@+id/cv_icon_upload"
        app:layout_constraintTop_toBottomOf="@+id/cv_icon_upload" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/camera"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cv_icon_camera"
        app:layout_constraintStart_toStartOf="@+id/cv_icon_camera"
        app:layout_constraintTop_toBottomOf="@+id/cv_icon_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>