<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crab_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/md_grey_100"
    app:cardCornerRadius="20dp"
    app:cardMaxElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/plan_list_svgrepo_com"
            app:layout_constraintStart_toStartOf="@id/date"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/result"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/iv_result"
            app:layout_constraintTop_toTopOf="@id/iv_result" />

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_result"
            app:layout_constraintTop_toBottomOf="@id/tv_result" />

        <TextView
            android:id="@+id/tv_output_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label"
            app:layout_constraintStart_toEndOf="@+id/tv_label" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/score"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_result"
            app:layout_constraintTop_toBottomOf="@id/tv_label" />

        <TextView
            android:id="@+id/tv_output_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/score"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_score"
            app:layout_constraintStart_toEndOf="@+id/tv_score" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>